Fixed overflow issue

--- a/src/components/NavButton/NavButton.scss
+++ b/src/components/NavButton/NavButton.scss
@@ -33,7 +33,7 @@
     transition: background-color 100ms ease-in-out;
     display: flex;
     align-items: center;
-    padding: 0.5rem 0 0.5rem 0.75rem;
+    padding: 0.5rem 0.75rem;
     // border-radius: 8px;
   }
 
