--- a/src/templates/SparksNav/SparksNav.scss
+++ b/src/templates/SparksNav/SparksNav.scss
@@ -32,8 +32,8 @@
     }
   }
   .boards {
-    margin-left: 0.5rem;
-    border-left: 2px solid $grey;
+    margin-left: 0.8rem;
+    // border-left: 1px solid $greyLight;
     box-sizing: border-box;
   }
 }
