--- a/src/views/Sidebar/Sidebar.scss
+++ b/src/views/Sidebar/Sidebar.scss
@@ -1,6 +1,6 @@
 @import "../../styles/colors.scss";
 .sidebar {
-  padding: 0 0 0.5rem;
+  padding: 0;
   background-color: $backgroundLight;
   box-sizing: border-box;
   height: 100vh;
@@ -23,19 +23,20 @@
   .sparks {
     min-height: 0;
     display: grid;
-    grid-template-rows: min-content auto min-content;
+    grid-template-rows: auto min-content;
     .sparksnav {
       min-height: 0;
       overflow-y: auto;
       overflow-x: hidden;
       padding: 1px 0;
+      border-bottom: 1px solid $greyLight;
     }
     .label {
       padding-left: 0.75rem;
     }
   }
   .divider {
-    padding: 0.75rem;
+    padding: 0.75rem 0;
   }
   .bottom-btns {
     flex-grow: 1;
